Fix spacing and remove graph border

--- a/src/css/Hourly.css
+++ b/src/css/Hourly.css
@@ -25,7 +25,6 @@
 
 .graph-hourly {
   background-color: #282c34;
-  border: 5px solid #25393e;
   border-radius: 25px;
   height: 50vh;
   margin-top: 25px;
@@ -75,8 +74,8 @@ svg {
   }
 
   svg{
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 2.5px;
+    margin-right: 2.5px;
     margin-top: 10px;
     width: 40px;
   }
