--- a/src/css/Week.css
+++ b/src/css/Week.css
@@ -50,7 +50,6 @@
 
 .graph-week {
   background-color: #282c34;
-  border: 5px solid #25393e;
   border-radius: 25px;
   height: 50vh;
   margin-top: 25px;
@@ -93,8 +92,8 @@ svg {
   }
 
   svg {
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-left: 2.5px;
+    margin-right: 2.5px;
     margin-top: 10px;
     width: 40px;
   }
